<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/ll_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TitleTextView"
                android:id="@+id/textViewTitle"
                android:text="@string/button_preview"
                />
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_preview"
            android:id="@+id/textViewMsg"
            />
        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/buttonCancel"
                style="@style/MainButton"
                android:layout_marginRight="5dp"
                android:text="@string/dialog_cancel"
                android:visibility="gone"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/buttonOk"
                style="@style/MainButton"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:layout_marginLeft="5dp"
                />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>