<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/rootLinearLayoutFF"
    tools:context=".ui.forgetpassword.ForgotPasswordActivity"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@color/colorInfo"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="12dp">

            <ImageView
                android:id="@+id/iv_back_forgot_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:onClick="onBackForgotPw"
                android:layout_marginStart="16dp"
                android:padding="2dp"
                android:src="@drawable/ic_back" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="32dp"
                android:text="@string/forgot_password_title"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="16dp"
                android:text="Enter the email which you used to sign up with us" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_email_Forgot_pw"
                style="@style/TextIpLayout"
                android:layout_width="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_email_Forgot_pw"
                    style="@style/editTexts"
                    android:layout_width="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_email"
                    android:importantForAutofill="noExcludeDescendants"
                    android:inputType="textEmailAddress|textNoSuggestions" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_activity_Forgot_pw"
                style="@style/MainButton"
                android:layout_width="220dp"
                android:layout_height="45dp"
                android:layout_marginBottom="8dp"
                android:onClick="onSubmitFogotPw"
                android:text="@string/reset_password"
                android:textAllCaps="false"
                android:layout_marginTop="16dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>